Hyprland setup stage 1.5

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -24,8 +24,6 @@
 # See https://wiki.hypr.land/Configuring/Monitors/
 monitor=,preferred,auto,1
 # monitor=
-
-
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -52,7 +50,9 @@ exec-once = nm-applet &
 exec-once =  waybar
 exec-once = swaync
 exec-once = swww-daemon
-
+exec-once = hypridle
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -111,10 +111,17 @@ general {
 decoration {
     rounding = 10
     rounding_power = 2
-
-
     rounding = 14
 
+    blur {
+        enabled = true             
+        size = 6                   
+        passes = 2                 
+        ignore_opacity = true      
+        new_optimizations = true   
+        special = true             
+        popups = true              
+    }
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -265,8 +272,15 @@ bind = $mainMod SHIFT, B, exec, ~/.config/waybar/scripts/launch.sh
 bind = $mainMod, N, exec, swaync-client -t
 bind = CTRL SHIFT, S, exec, FILE=~/Pictures/Screenshots/shot_$(date +%F_%H-%M-%S).png && grim -g "$(slurp)" - | satty --filename - --output-filename "$FILE" --copy-command "wl-copy" --early-exit
 bind = , Print, exec, FILE=~/Pictures/Screenshots/shot_$(date +%F_%H-%M-%S).png && grim - | satty --filename - --output-filename "$FILE" --early-exit && wl-copy < "$FILE"
+bindl = , switch:on:Lid Switch, exec, loginctl lock-session
+bind = $mainMod, L, exec, hyprlock
 
-
+bind = SUPER, space,      exec, ~/.config/rofi/scripts/launcher.sh
+bind = SUPER SHIFT, V,          exec, ~/.config/rofi/scripts/clipboard.sh
+bind = SUPER, W,          exec, ~/.config/rofi/scripts/wifi.sh
+bind = SUPER, B,          exec, ~/.config/rofi/scripts/bluetooth.sh
+bind = SUPER, P,          exec, ~/.config/rofi/scripts/projects.sh
+bind = SUPER SHIFT, D,          exec, ~/.config/rofi/scripts/dotfiles.sh
 
 
 # Move focus with mainMod + arrow keys
