Hyprland setup stage 1.6

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -32,7 +32,7 @@ monitor=,preferred,auto,1
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = thunar
+$fileManager = nautilus
 $menu = rofi -show drun
 #$menu = fuzzel 
 
@@ -53,6 +53,8 @@ exec-once = swww-daemon
 exec-once = hypridle
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
+exec-once = ~/.config/hypr/scripts/swww-restore.sh
+
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -258,7 +260,7 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, T, exec, $terminal
+bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, M, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
 bind = $mainMod, E, exec, $fileManager
@@ -271,16 +273,18 @@ bind = $mainMod, F, fullscreen, 1
 bind = $mainMod SHIFT, B, exec, ~/.config/waybar/scripts/launch.sh
 bind = $mainMod, N, exec, swaync-client -t
 bind = CTRL SHIFT, S, exec, FILE=~/Pictures/Screenshots/shot_$(date +%F_%H-%M-%S).png && grim -g "$(slurp)" - | satty --filename - --output-filename "$FILE" --copy-command "wl-copy" --early-exit
-bind = , Print, exec, FILE=~/Pictures/Screenshots/shot_$(date +%F_%H-%M-%S).png && grim - | satty --filename - --output-filename "$FILE" --early-exit && wl-copy < "$FILE"
-bindl = , switch:on:Lid Switch, exec, loginctl lock-session
-bind = $mainMod, L, exec, hyprlock
+bind = ,Print, exec, FILE=~/Pictures/Screenshots/shot_$(date +%F_%H-%M-%S).png && grim - | satty --filename - --output-filename "$FILE" --early-exit && wl-copy < "$FILE"
+bindl =,switch:on:Lid Switch, exec, loginctl lock-session
+bind = $mainMod SHIFT, L, exec, hyprlock
+bind = SUPER SHIFT, W, exec, ~/.config/rofi/scripts/wallpaper.sh
 
-bind = SUPER, space,      exec, ~/.config/rofi/scripts/launcher.sh
-bind = SUPER SHIFT, V,          exec, ~/.config/rofi/scripts/clipboard.sh
-bind = SUPER, W,          exec, ~/.config/rofi/scripts/wifi.sh
-bind = SUPER, B,          exec, ~/.config/rofi/scripts/bluetooth.sh
-bind = SUPER, P,          exec, ~/.config/rofi/scripts/projects.sh
-bind = SUPER SHIFT, D,          exec, ~/.config/rofi/scripts/dotfiles.sh
+
+bind = $mainMod, space,      exec, ~/.config/rofi/scripts/launcher.sh
+bind = $mainMod SHIFT, V,    exec, ~/.config/rofi/scripts/clipboard.sh
+bind = $mainMod, W,          exec, ~/.config/rofi/scripts/wifi.sh
+bind = $mainMod, B,          exec, ~/.config/rofi/scripts/bluetooth.sh
+bind = $mainMod SHIFT, P,    exec, ~/.config/rofi/scripts/projects.sh
+bind = $mainMod SHIFT, D,    exec, ~/.config/rofi/scripts/dotfiles.sh
 
 
 # Move focus with mainMod + arrow keys
