--- a/swaync/.config/swaync/config.json
+++ b/swaync/.config/swaync/config.json
@@ -1,117 +1,142 @@
 {
   "$schema": "/etc/xdg/swaync/configSchema.json",
-
   "positionX": "right",
   "positionY": "top",
   "layer": "overlay",
-  "control-center-layer": "top",
+  "control-center-layer": "overlay",
   "layer-shell": true,
-  "cssPriority": "user",
-
-  "control-center-width": 420,
-  "control-center-height": 560,
-
-  "notification-window-width": 380,
-
-  "timeout": 6,
-  "timeout-low": 4,
+  "cssPriority": "application",
+  "control-center-margin-top": 8,
+  "control-center-margin-bottom": 8,
+  "control-center-margin-right": 8,
+  "control-center-margin-left": 0,
+  "notification-inline-replies": false,
+  "notification-body-image-height": 100,
+  "notification-body-image-width": 200,
+  "timeout": 5,
+  "timeout-low": 2,
   "timeout-critical": 0,
-
-  "fit-to-screen": true,
-  "relative-timestamps": true,
-  "notification-grouping": true,
-
-  "image-visibility": "when-available",
-
+  "fit-to-screen": false,
+  "control-center-width": 420,
+  "control-center-height": 800,
+  "notification-window-width": 380,
   "keyboard-shortcuts": true,
-  "hide-on-action": true,
+  "image-visibility": "when-available",
+  "transition-time": 200,
   "hide-on-clear": false,
-
-  "text-empty": "No notifications 🎉",
+  "hide-on-action": true,
+  "script-fail-notify": true,
 
   "widgets": [
-    "title",
-    "dnd",
-    "mpris",
     "buttons-grid",
+    "volume",
+    "backlight",
+    "mpris",
+    "dnd",
+    "title",
     "notifications"
   ],
 
   "widget-config": {
+    "buttons-grid": {
+      "buttons-per-row": 4,
+      "actions": [
+        {
+          "label": "󰐥",
+          "tooltip": "Power Menu",
+          "type": "normal",
+          "command": "swaync-client -cp && wlogout"
+        },
+        {
+          "label": "󰌾",
+          "tooltip": "Lock Screen",
+          "type": "normal",
+          "command": "swaync-client -cp && hyprlock"
+        },
+        {
+          "label": "󱓻",
+          "tooltip": "Color Picker",
+          "type": "normal",
+          "command": "swaync-client -cp && hyprpicker -a"
+        },
+        {
+          "label": "󰛨",
+          "tooltip": "Blue Light Filter",
+          "type": "toggle",
+          "active": false,
+          "update-command": "~/.config/swaync/scripts/hyprsunset-state.sh",
+          "command": "~/.config/swaync/scripts/toggle-hyprsunset.sh"
+        },
+        {
+          "label": "󰖩",
+          "tooltip": "WiFi",
+          "type": "toggle",
+          "active": false,
+          "update-command": "~/.config/swaync/scripts/wifi-state.sh",
+          "command": "swaync-client -cp && ~/.config/rofi/scripts/wifi.sh"
+        },
+        {
+          "label": "󰂯",
+          "tooltip": "Bluetooth",
+          "type": "toggle",
+          "active": false,
+          "update-command": "~/.config/swaync/scripts/bluetooth-state.sh",
+          "command": "swaync-client -cp && ~/.config/rofi/scripts/bluetooth.sh"
+        },
+        {
+          "label": "󰎆",
+          "tooltip": "Previous",
+          "type": "normal",
+          "command": "playerctl previous"
+        },
+        {
+          "label": "󰐎",
+          "tooltip": "Play / Pause",
+          "type": "normal",
+          "command": "playerctl play-pause"
+        },
+        {
+          "label": "󰒭",
+          "tooltip": "Next",
+          "type": "normal",
+          "command": "playerctl next"
+        },
+        {
+          "label": "󰝟",
+          "tooltip": "Stop",
+          "type": "normal",
+          "command": "playerctl stop"
+        }
+      ]
+    },
 
-    "title": {
-      "text": "Notifications",
-      "clear-all-button": true
+    "volume": {
+      "label": "󰕾 ",
+      "show-per-app": false
+    },
+
+    "backlight": {
+      "label": "󰃟 ",
+      "device": "intel_backlight",
+      "subsystem": "backlight",
+      "min": 1
+    },
+
+    "mpris": {
+      "show-album-art": "when-available",
+      "autohide": true
     },
 
     "dnd": {
       "text": "Do Not Disturb"
     },
 
-    "notifications": {
-      "vexpand": true
+    "title": {
+      "text": "Notifications",
+      "clear-all-button": true,
+      "button-text": "󰆴 Clear All"
     },
 
-    "mpris": {
-      "autohide": true
-    },
-
-    "buttons-grid": {
-      "buttons-per-row": 5,
-      "actions": [
-        {
-          "label": "󰖩",
-          "type": "toggle",
-          "command": "sh -c '[[ $SWAYNC_TOGGLE_STATE == true ]] && nmcli radio wifi on || nmcli radio wifi off'",
-          "update-command": "sh -c '[[ $(nmcli radio wifi) == \"enabled\" ]] && echo true || echo false'"
-        },
-        {
-          "label": "󰂯",
-          "type": "toggle",
-          "command": "sh -c '[[ $SWAYNC_TOGGLE_STATE == true ]] && bluetoothctl power on || bluetoothctl power off'",
-          "update-command": "sh -c 'bluetoothctl show | grep -q \"Powered: yes\" && echo true || echo false'"
-        },
-        {
-          "label": "🌙",
-          "type": "toggle",
-
-          "command": "sh -c '[[ $SWAYNC_TOGGLE_STATE == true ]] && hyprsunset -t 4500 & disown || pkill hyprsunset'",
-
-          "update-command": "pgrep hyprsunset >/dev/null && echo true || echo false"
-        },
-        {
-          "label": "",
-          "type": "toggle",
-          "command": "pamixer -t"
-        },
-        {
-          "label": "🎨",
-          "type": "button",
-          "command": "hyprpicker -a"
-        },
-        {
-          "label": "📸",
-          "type": "button",
-          "command": "grimblast copy area"
-        },
-        {
-          "label": "🖥",
-          "type": "button",
-          "command": "grimblast copy screen"
-        },
-        {
-          "label": "🔒",
-          "type": "button",
-          "command": "hyprlock"
-        },
-        {
-          "label": "⏻",
-          "type": "button",
-          "command": "wlogout"
-        }
-      ]
-    }
-
+    "notifications": {}
   }
-
 }
