Hyprland setup stage 1.7

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -217,7 +217,10 @@ master {
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+
+    focus_on_activate = true
 }
+
 
 
 #############
@@ -267,7 +270,30 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+# bind = $mainMod, J, togglesplit, # dwindle
+
+# Move focus with SUPER + hjkl (Vim style)
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
+
+# Move windows — SUPER + SHIFT + hjkl
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
+
+# Resize windows — SUPER + CTRL + hjkl
+bind = $mainMod CTRL, H, resizeactive, -40 0
+bind = $mainMod CTRL, L, resizeactive,  40 0
+bind = $mainMod CTRL, K, resizeactive,  0 -40
+bind = $mainMod CTRL, J, resizeactive,  0  40
+
+# Cycle workspaces — SUPER + ALT + hjkl
+bind = $mainMod ALT, H, workspace, e-1
+bind = $mainMod ALT, L, workspace, e+1
+
 # my keybinds
 bind = $mainMod, F, fullscreen, 1
 bind = $mainMod SHIFT, B, exec, ~/.config/waybar/scripts/launch.sh
@@ -318,8 +344,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -394,3 +420,17 @@ windowrule {
     size = 900 700
     animation = popin
 }
+
+# Windows rule for opening application on there respective workplaces and move the focus there
+
+windowrule = workspace 1, match:class kitty
+windowrule = workspace 2, match:class brave-browser
+windowrule = workspace 3, match:class codium
+windowrule = workspace 4, match:class org.gnome.Nautilus
+
+
+# open floating windows for saving file and other stuff
+windowrule = float on, center on, match:title Save
+windowrule = float on, center on, match:title Open
+windowrule = float on, center on, match:title File
+windowrule = float on, center on, match:title Export
