--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -1,7 +1,156 @@
 {
-    "logo": {
-        "type": "image",
-        "source": "/home/g4ur4v/.dotfiles/fastfetch/.config/fastfetch/pngwing.com.png",
-        "width": 30
-    }
+  "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+  "logo": {
+    "color": {"1": "#FFC0CB", "2": "white"},
+    "padding": {
+      "top": 4,
+      "right": 5
+    },
+    "height": 18
+  },
+  "display": {
+    "separator": " ▸ " // :
+  },
+"modules": [
+  {
+    "type": "title"
+  },
+"break",
+{
+  "type": "custom",
+  "format": "\u001b[90m┌────────────────────── Operating System ──────────────────────┐"
+},
+{
+  "type": "os",
+  "key": "󰨡 OS:",
+  "keyColor": "#FFC0CB"
+},
+{
+  "type": "kernel",
+  "key": "│ Kernel:  ",
+  "keyColor": "#FFC0CB"
+},
+{
+  "type": "shell",
+  "key": "│ Shell:  ",
+  "keyColor": "#FFC0CB"
+},
+{
+  "type": "terminal",
+  "key": "│ Terminal:  ",
+  "keyColor": "#FFC0CB"
+},
+{
+  "type": "terminalfont",
+  "key": "│ Terminal Font:  ",
+  "keyColor": "#FFC0CB"
+},
+{
+  "type": "lm",
+  "key": "│ DM: 󰌾 ",
+  "keyColor": "#FFC0CB"
+},
+{
+  "type": "de",
+  "key": "│ DE:  ",
+  "keyColor": "#FFC0CB"
+},
+{
+  "type": "wm",
+  "key": "│ WM:  ",
+  "keyColor": "#FFC0CB"
+},
+{
+  "type": "wmtheme",
+  "key": "│ WM Theme: 󰃣 ",
+  "keyColor": "#FFC0CB"
+},
+{
+  "type": "packages",
+  "key": "└ Packages:  ",
+  "keyColor": "#FFC0CB"
+},
+{
+  "type": "custom",
+  "format": "\u001b[90m├────────────────────── Device ────────────────────────────────┤"
+},
+{
+  "type": "host",
+  "key": "󰟀 Host:",
+  "keyColor": "yellow"
+},
+{
+  "type": "bios",
+  "key": "│ BIOS:  ",
+  "keyColor": "yellow"
+},
+{
+  "type": "memory",
+  "key": "│ RAM Memory:  ",
+  "keyColor": "yellow"
+},
+{
+  "type": "swap",
+  "key": "│ Swap: 󰾴 ",
+  "keyColor": "yellow"
+},
+{
+  "type": "cpu",
+  "key": "│ Processor: 󰍛 ",
+  "keyColor": "yellow"
+},
+{
+  "type": "gpu",
+  "key": "│ Videocard: 󰢮 ",
+  "keyColor": "yellow"
+},
+{
+  "type": "disk",
+  "key": "│ Storage:  ",
+  "keyColor": "yellow"
+},
+{
+  "type": "battery",
+  "key": "└ Battery: 󰁹 ",
+  "keyColor": "yellow"
+},
+{
+  "type": "custom",
+  "format": "\u001b[90m├────────────────────── Others Configurations ─────────────────┤"
+},
+{
+  "type": "uptime",
+  "key": " Uptime:",
+  "keyColor": "cyan"
+},
+{
+   "type": "datetime",
+   "key": "│ DateTime:  ",
+   "keyColor": "cyan"
+},
+{
+   "type": "command",
+   "key": "│ OS Time Life:  ",
+   "keyColor": "cyan",
+   "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
+},
+{
+  "type": "locale",
+  "key": "└ Locale: 󰇧 ",
+  "keyColor": "cyan"
+},
+{
+  "type": "custom",
+  "format": "\u001b[90m└──────────────────────────────────────────────────────────────┘"
+},
+{
+  "type": "colors",
+  "paddingLeft": 24,
+  "symbol": "circle",
+  "block": {
+    "width": 10
+  }
+},
+"break",
+]
 }
