Hyprland setup stage 1.7.1

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -26,6 +26,9 @@
     // ── Workspaces ──────────────────────────────────
     "hyprland/workspaces": {
         "disable-scroll": true,
+        "persistent-workspaces": {
+                "*": 5
+            },
         "format": "{icon}",
         "format-icons": {
             "1":  "१",
