--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -1,6 +1,7 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
+    "source": "~/.dotfiles/fastfetch/.config/fastfetch/krishna1.png",
     "color": {"1": "#FFC0CB", "2": "white"},
     "padding": {
       "top": 4,
