Hyprland setup stage 1.7.2

--- a/hypr/.config/hypr/hypridle.conf
+++ b/hypr/.config/hypr/hypridle.conf
@@ -22,3 +22,8 @@ listener {
     on-timeout = systemctl suspend
     on-resume = hyprctl dispatch dpms on
 }
+
+listener {
+    timeout = 3600       # 60 min — power off
+    on-timeout = systemctl poweroff
+}
