--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -57,9 +57,10 @@ exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = ~/.config/hypr/scripts/swww-restore.sh
 exec-once = /usr/lib/hyprpolkitagent/hyprpolkitagent
-
+exec-once = ~/.config/waybar/scripts/mpris-watch.sh
 
 # exec-once = qs -c noctalia-shell --no-duplicate
+
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -312,11 +313,11 @@ bind = ,Print, exec, FILE=~/Pictures/Screenshots/shot_$(date +%F_%H-%M-%S).png &
 bindl =,switch:on:Lid Switch, exec, loginctl lock-session
 bind = $mainMod SHIFT, Return, exec, hyprlock
 bind = SUPER SHIFT, W, exec, ~/.config/rofi/scripts/wallpaper.sh
+bind = SUPER, O, exec, normcap
 
-
-bind = $mainMod, space,      exec, ~/.config/rofi/scripts/launcher.sh
+# bind = $mainMod, space,      exec, ~/.config/rofi/scripts/launcher.sh
 bind = $mainMod SHIFT, V,    exec, ~/.config/rofi/scripts/clipboard.sh
-bind = $mainMod, W,          exec, ~/.config/rofi/scripts/wifi.sh
+bind = $mainMod ALT, W,          exec, ~/.config/rofi/scripts/wifi.sh
 bind = $mainMod, B,          exec, ~/.config/rofi/scripts/bluetooth.sh
 bind = $mainMod SHIFT, P,    exec, ~/.config/rofi/scripts/projects.sh
 bind = $mainMod SHIFT, D,    exec, ~/.config/rofi/scripts/dotfiles.sh
@@ -432,7 +433,7 @@ windowrule {
 
 # Windows rule for opening application on there respective workplaces and move the focus there
 
-windowrule = workspace 1, match:class kitty
+# windowrule = workspace 1, match:class kitty
 windowrule = workspace 2, match:class brave-browser
 windowrule = workspace 3, match:class codium
 windowrule = workspace 4, match:class thunar
