--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -16,7 +16,7 @@ general {
 
 background {
     monitor =
-    path = ~/Pictures/wallpaper/flatppuccin.png
+    path = ~/Pictures/wallpaper/cat-jellyfish.jpg
     blur_size = 8
     blur_passes = 3
     brightness = 0.7
