Hyprland setup stage 1.7.3

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -500,3 +500,21 @@ windowrule {
     move = onscreen cursor -50% -50%
     animation = popin
 }
+windowrule {
+    name = float-window-kdeconnect
+    match:class = org.kde.kdeconnect.handler
+    float = yes
+    # size = 900 700
+    move = onscreen cursor -50% -50%
+    animation = popin
+}
+
+windowrule {
+    name = float-thunar-rename
+    match:class = thunar
+    match:title = Rename.*
+    float = yes
+    move = onscreen cursor -50% -50%
+    animation = popin
+}
+
