--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -3,7 +3,7 @@
     "layer": "top",
     "position": "top",
     // "width": 1000,
-    "height": 30,
+    // "height": 48,
     "spacing": 0,
 
     "modules-left": [
