--- a/waybar/.config/waybar/config_capsule.jsonc
+++ b/waybar/.config/waybar/config_capsule.jsonc
@@ -16,7 +16,7 @@
         "hyprland/workspaces"
     ],
     "modules-right": [
-        // "idle_inhibitor",
+        "idle_inhibitor",
         "pulseaudio",
         "network",
         "temperature",
